[gd_scene load_steps=8 format=3 uid="uid://bhkpdmoap6xnb"]

[ext_resource type="Script" path="res://scripts/taser.gd" id="1_mw2jf"]
[ext_resource type="PackedScene" uid="uid://b3thkd7lrxt3u" path="res://assets/Enemies/Taser/finaler256.fbx" id="2_mw2jf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bxi8a"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mw2jf"]
radius = 5.6172

[sub_resource type="SphereShape3D" id="SphereShape3D_0ifho"]
radius = 3.87848

[sub_resource type="CylinderMesh" id="CylinderMesh_mw2jf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ifho"]
transparency = 1
albedo_color = Color(0.98, 0, 0, 0.509804)

[node name="Taser" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_mw2jf")

[node name="TaserModel" parent="." instance=ExtResource("2_mw2jf")]
transform = Transform3D(0.342916, 0, 0, 0, 0.342916, 0, 0, 0, 0.342916, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.619142, 0)
shape = SubResource("CapsuleShape3D_bxi8a")

[node name="Detect Area" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Detect Area"]
shape = SubResource("SphereShape3D_mw2jf")

[node name="Attack Area" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack Area"]
shape = SubResource("SphereShape3D_0ifho")

[node name="Shootpivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.26933, 0)

[node name="RayCast3D" type="RayCast3D" parent="Shootpivot"]
transform = Transform3D(0.993868, 0, 0, 0, 0.993868, 0, 0, 0, 0.249575, 0, 0.0364993, 0)
target_position = Vector3(0, -1, 20)
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Shootpivot/RayCast3D"]
transform = Transform3D(0.0685138, 0, 0, 0, -0.545471, -0.0575452, 0, 9.96553, -0.00314978, 0, -0.478794, 10.1657)
visible = false
mesh = SubResource("CylinderMesh_mw2jf")
surface_material_override/0 = SubResource("StandardMaterial3D_0ifho")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Detect Area" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="Detect Area" to="." method="_on_detect_area_body_exited"]
[connection signal="body_entered" from="Attack Area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="Attack Area" to="." method="_on_attack_area_body_exited"]
